changed button to btn-warning and adjusted image path for login and register screen

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -89,7 +89,7 @@ hr {
 }
 
 .modal-content{
-	background-image: url("/img/login.jpg");
+	background-image: url("../img/login.jpg");
 	opacity:0.87 !important;
 	color:white;
 }
