--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -77,6 +77,24 @@ hr {
 	margin-top: 10px;
 
 }
+
+.updatePothole {
+	
+	border-style: solid;
+	border-radius: 10px;
+	border-color: hsl(0, 0%, 90%);
+	margin: 0% 20% 3% 20%;
+	text-align: left;
+}
+
+.innerUpdate {
+	padding-left: 10%;
+	padding-right: 10%;
+	padding-top: 10px;
+	
+}
+
+
 #pothole {
 	padding-right: 8%;
 }
