--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -125,5 +125,6 @@ hr {
 }
 
 .error {
-	color : red;
+	/*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
+	color : #ff4d00;
 }
